# parallelGraphColoring

./: .gitignore  CMakeLists.txt  MyPackagedTask.h  PrintMenu.h  README.md  ThreadPool.cpp  ThreadPool.h  benchmark.sh  file.txt.save  main.cpp  policy_readme.md  projectual_choices.md  runlim  runlim.sh
Graph/: Algorithms.cpp  Graph.h  GraphAdjL.cpp  GraphAdjM.cpp  GraphCSR.cpp
Graph/readInput/: ReadInput.cpp  ReadInput.h
asa/: Graph.h  Input.h  graphColoring.cpp  graphColoring.h
asa/graph/: Graph.cpp  Graph.h  Graph_simple.cpp  Graph_simple.h  graph_csr.cpp  graph_csr.h
coloring/: coloring.cpp  coloring.h
graph/: Graph.cpp  Graph.h  graph.cpp  graph.h
graph/benchmark/: rgg_n_2_15_s0.txt
results/: output_results_input012.txt  output_results_input34.txt  output_results_input5.txt  output_results_input6.txt  results.xlsx
